falta conectar wp con nginx para ver si furula y creo que ya

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,13 @@
 #Variables para Mariadb
 MYSQL_ROOT_PASSWORD=secret
-MYSQL_DATABASE=database
+MYSQL_DATABASE=inceptiondb
 MYSQL_USER=god
 MYSQL_PASSWORD=yoquese
+MYSQL_HOST=mariadb
 
 #Variables para Wordpress
+WP_URL=localhost
+WP_TITLE=inception
+WP_ADMIN=smeixoei
+WP_ADMIN_EMAIL=smeixoei@student.42madrid.fr
 
