--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,18 +8,24 @@ http {
 	access_log /dev/stdout;
 	error_log /dev/stderr;
 
-
 	server {
 		listen 443 ssl;
 		server_name smeixoei.42.fr;
+		
 		ssl_certificate /keys/example.crt;
 		ssl_certificate_key /keys/example.key;
 		ssl_protocols TLSv1.2 TLSv1.3;
 	
-		root /app;
+		root /wordpress;
 
-		location /app {
-		index index.html;
+		location / {
+			 try_files $uri $uri/ /index.php?$args;
+		}
+
+		location ~ \.php$ {
+			include fastcgi_params;
+			fastcgi_intercept_errors on;
+			fastcgi_pass wordpress:9000;
 		}
 	}
 }
