--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.3"
-
 services:
   nginx:
     container_name: nginx
@@ -7,9 +5,46 @@ services:
     ports:
       - 443:443
     restart: always
+    volumes:
+      - wp_data:/wordpress
+    networks:
+      - services
 
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb/
     env_file: .env
     restart: always
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    networks:
+      - services
+
+  wordpress:
+    container_name: wp
+    build: ./requirements/wordpress/
+    restart: always
+    env_file: .env
+    volumes:
+      - wp_data:/wordpress
+    networks:
+      - services
+
+networks:
+  services:
+
+volumes:
+  mariadb_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/sameidu/data/mariadb_data
+      o: bind
+
+  wp_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/sameidu/data/wp_data
+      o: bind
+
