Furula, a falta de añadir un usuario al wp

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,6 +17,7 @@ http {
 		ssl_protocols TLSv1.2 TLSv1.3;
 	
 		root /wordpress;
+		index index.php index.html;
 
 		location / {
 			 try_files $uri $uri/ /index.php?$args;
@@ -25,6 +26,7 @@ http {
 		location ~ \.php$ {
 			include fastcgi_params;
 			fastcgi_intercept_errors on;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_pass wordpress:9000;
 		}
 	}
