Creo que todo va a pedir de Milhouse

--- a/srcs/.env
+++ b/srcs/.env
@@ -10,4 +10,6 @@ WP_URL=localhost
 WP_TITLE=inception
 WP_ADMIN=smeixoei
 WP_ADMIN_EMAIL=smeixoei@student.42madrid.fr
-
+WP_USER=god
+WP_PASS=yoquese
+WP_EMAIL=god@god.me
