no reescribe el entrypoint de wp :c

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,6 +12,9 @@ http {
 		listen 443 ssl;
 		server_name smeixoei.42.fr;
 		
+		include /etc/nginx/mime.types;
+		default_type application/octet-stream;
+
 		ssl_certificate /keys/example.crt;
 		ssl_certificate_key /keys/example.key;
 		ssl_protocols TLSv1.2 TLSv1.3;
