--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -18,19 +18,31 @@ http {
 		ssl_certificate /keys/example.crt;
 		ssl_certificate_key /keys/example.key;
 		ssl_protocols TLSv1.2 TLSv1.3;
-	
+		
 		root /wordpress;
-		index index.php index.html;
+		index index.php index html;
 
-		location / {
-			 try_files $uri $uri/ /index.php?$args;
+		location /wordpress {
+			try_files $uri $uri/ /index.php?$args;
 		}
 
+		location /adminer {
+			index adminer.php;
+		}
+
+		location ~ ^/adminer/*.php$ {
+		       	include fastcgi_params;
+                        fastcgi_intercept_errors on;
+                        fastcgi_param SCRIPT_FILENAME /adminer$fastcgi_script_name;
+                        fastcgi_pass adminer:9001;
+                }
+		
 		location ~ \.php$ {
 			include fastcgi_params;
 			fastcgi_intercept_errors on;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_pass wordpress:9000;
 		}
+
 	}
 }
