no termina de furular bien cockpit

--- a/srcs/.env
+++ b/srcs/.env
@@ -2,7 +2,7 @@
 MYSQL_ROOT_PASSWORD=secret
 MYSQL_DATABASE=inceptiondb
 MYSQL_USER=god
-MYSQL_PASSWORD=yoquese
+MYSQL_PASSWORD=palomita15
 MYSQL_HOST=mariadb
 
 #Variables para Wordpress
@@ -10,6 +10,14 @@ WP_URL=localhost
 WP_TITLE=inception
 WP_ADMIN=smeixoei
 WP_ADMIN_EMAIL=smeixoei@student.42madrid.fr
-WP_USER=god
-WP_PASS=yoquese
-WP_EMAIL=god@god.me
+WP_USER=todopoderoso
+WP_PASS=palomita15
+WP_EMAIL=todopoderoso@god.me
+
+#Variables de sftp
+SFTP_USER=diosito
+SFTP_PASS=palomita15
+
+#Variables de cockpit
+COCKPIT_USER=kamisama
+COCKPIT_PASSWORD=palomita15
