--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -51,5 +51,12 @@ http {
             		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             		proxy_set_header X-Forwarded-Proto $scheme;
     		}
+
+		location /staticweb/ {
+			proxy_pass http://staticweb:80/;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+		}
+
 	}
 }
