--- a/srcs/.env
+++ b/srcs/.env
@@ -6,7 +6,7 @@ MYSQL_PASSWORD=palomita15
 MYSQL_HOST=mariadb
 
 #Variables para Wordpress
-WP_URL=localhost
+WP_URL=smeixoei.42.fr
 WP_TITLE=inception
 WP_ADMIN=smeixoei
 WP_ADMIN_EMAIL=smeixoei@student.42madrid.fr
