--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -41,7 +41,7 @@ http {
 			include fastcgi_params;
 			fastcgi_intercept_errors on;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_pass wordpress:9000;
+			fastcgi_pass wp:9000;
 		}
 
 		location /portainer/ {
